--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+    <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login();loginForm.reset()">
       <input class="form-control mr-sm-2" type="text" name= "username" placeholder="Username" required [(ngModel)] = "model.username">
       <input class="form-control mr-sm-2" type="password" name= "password" placeholder="Password" required [(ngModel)] = "model.password">
       <button [disabled]= "!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
